--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
     window_manager: ^0.4.3
     provider: ^6.1.2
     flutter_bloc: ^9.1.0
+    firebase_core: ^3.12.1
+    fluttertoast: ^8.2.12
+    firebase_auth: ^5.5.1
 
 dev_dependencies:
     flutter_test:
