--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
     firebase_core: ^3.12.1
     fluttertoast: ^8.2.12
     firebase_auth: ^5.5.1
+    google_sign_in: ^6.3.0
 
 dev_dependencies:
     flutter_test:
