Fixed formatting and macOS run

--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -28,5 +28,14 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.53516137480-j2pdr1bllut1b5d3n8sjdqjc01hcar8v</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
