Added signup form validation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,4 +6,9 @@
     100
   ],
   "dart.lineLength": 100,
+  "explorer.fileNesting.enabled": true,
+  "explorer.fileNesting.patterns": {
+    "*": "${basename}.*.${extension}",
+    "*.dart": "${basename}.*.dart",
+  },
 }
