--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
+
+        android:enableOnBackInvokedCallback="true"
         android:label="scale_up"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
