Add new features and improvements for the All Lessons page
- Introduced new components: TitleBar, SearchBar, LessonBody, LessonGroup, LessonProgression, UnitTileWhite, and LessonTileColored.
- Updated navigation to use `AppRoutes.allLessons`.
- Added `scroll_animator` dependency.
- Enhanced color handling with `ColorLuminanceExtension`.
- Improved lesson data structure in `lessons.json` by adding IDs for lessons.
- Refactored sign-out method in `AuthenticationRepository`.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
   default_map: ^0.1.0+1
+  scroll_animator: ^0.3.0
 
 dev_dependencies:
   flutter_test:
