--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   json_annotation: ^4.9.0
   default_map: ^0.1.0+1
   scroll_animator: ^0.3.0
+  parser_combinator:
+    git: https://github.com/water-mizuu/parser_combinator.git
 
 dev_dependencies:
   flutter_test:
