- Upgraded dart SDK to version 3.7.0 - Changed macOS certificates - Removed unused lesson page events and simplified - Added method to get unit name from ID - Created snackbar utility.

--- a/macos/Runner/DebugProfile.entitlements
+++ b/macos/Runner/DebugProfile.entitlements
@@ -12,7 +12,7 @@
 	<true/>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.calizo-cerenio-siggayo-zuniga-hci.scaleUp</string>
+		<string>$(AppIdentifierPrefix)com.calizo-cerenio-siggayo-zuniga-hci.scale_up</string>
 	</array>
 </dict>
 </plist>
