--- a/macos/Runner/Release.entitlements
+++ b/macos/Runner/Release.entitlements
@@ -10,7 +10,7 @@
 	<true/>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.calizo-cerenio-siggayo-zuniga-hci.scaleUp</string>
+		<string>$(AppIdentifierPrefix)com.calizo-cerenio-siggayo-zuniga-hci.scale_up</string>
 	</array>
 </dict>
 </plist>
