--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -13,6 +13,10 @@ analyzer:
     - "**/*.freezed.dart"
   errors:
     invalid_annotation_target: ignore
+
+formatter:
+  page_width: 100
+
 include: package:flutter_lints/flutter.yaml
 
 linter:
