--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,13 @@ dependencies:
   firebase_core: ^3.12.1
   fluttertoast: ^8.2.12
   firebase_auth: ^5.5.1
-  google_sign_in: ^6.3.0
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
   default_map: ^0.1.0+1
   scroll_animator: ^0.3.0
   cloud_firestore: ^5.6.6
+  google_sign_in_all_platforms: ^1.1.0
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
@@ -81,6 +82,7 @@ flutter:
     - assets/illustrations/lessons.png
     - assets/illustrations/quizzes.png
     - assets/illustrations/signup.png
+    - secrets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
