--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   cloud_firestore: ^5.6.6
   google_sign_in_all_platforms: ^1.1.0
   google_sign_in: ^6.3.0
+  flutter_animation_progress_bar: ^2.3.1
+  super_tooltip: ^2.0.9
+  local_hero: ^0.3.0
 
 dev_dependencies:
   flutter_test:
