--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_animation_progress_bar: ^2.3.1
   super_tooltip: ^2.0.9
   local_hero: ^0.3.0
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
