feat: Add instructions and progress bar for learning and practice pages
- Implemented Instructions widget for displaying conversion questions based on the current question type.
- Created LearnProgressBar widget to visualize learning progress with a customizable progress bar.
- Updated LessonPage to include LessonInformation and refactored child widget handling.
- Introduced LearnTile and PracticeTile for displaying chapters in learning and practice pages respectively.
- Enhanced LessonHeader to fetch lesson data from LessonPageCubit.
- Added LessonLearnChapters and LessonPracticeChapters components to display respective chapters.
- Refactored LessonProgression and LessonUnits to utilize LessonPageCubit for state management.
- Created PracticeTile for practice chapters with completion tracking.
- Updated PracticePage to handle new state management and display logic.
- Added utility extension for choosing random elements from a list.
- Updated dependencies in Podfile.lock and pubspec.yaml for compatibility and new features.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   super_tooltip: ^2.0.9
   local_hero: ^0.3.0
   dotted_border: ^2.1.0
+  flutter_animate: ^4.5.2
 
 dev_dependencies:
   flutter_test:
