--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   local_hero: ^0.3.0
   dotted_border: ^2.1.0
   flutter_animate: ^4.5.2
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
