feat: Implement IndirectStepsCubit and IndirectStepsState for handling indirect learning steps
- Added IndirectStepsCubit to manage the state and logic for indirect learning steps.
- Created IndirectStepsState to encapsulate the state of the indirect steps, including question, answers, choices, and animation.
- Introduced animation methods for moving answers to and from choices.
- Developed UnselectedWidget, SelectedWidget, CorrectWidget, and IncorrectWidget for visual feedback on choices.
- Implemented CompletedLearnBody and LearnBody for displaying completed learning states and current learning content.
- Added SplashPage for initial loading state and navigation.
- Created FloatingCard and FloatingCardWithHint for consistent UI elements.
- Introduced ToolTip utility for enhanced user interaction.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   dotted_border: ^2.1.0
   flutter_animate: ^4.5.2
   google_fonts: ^6.2.1
+  flutter_inset_shadow: ^2.0.3
 
 dev_dependencies:
   flutter_test:
@@ -84,6 +85,7 @@ flutter:
   assets:
     - assets/
     - assets/logos/google.png
+    - assets/illustrations/
     - assets/illustrations/topic.png
     - assets/illustrations/lessons.png
     - assets/illustrations/quizzes.png
