--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_animate: ^4.5.2
   google_fonts: ^6.2.1
   flutter_inset_shadow: ^2.0.3
+  flutter_markdown_plus: ^1.0.3
 
 dev_dependencies:
   flutter_test:
