--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -16,7 +16,7 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
@@ -62,6 +62,6 @@ jobs:
           publish_branch: gh-pages                     # branch to push built site :contentReference[oaicite:9]{index=9}
           publish_dir: ./build/web                     # directory containing Flutter output :contentReference[oaicite:10]{index=10}
           force_orphan: true
-          user_name: 'water-mizuu'
-          user_email: 'mizu.github.em@gmail.com'
+          user_name: 'github-ci[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
           commit_message: 'Publish to gh-pages'
