--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_animate: ^4.5.2
   google_fonts: ^6.2.1
   flutter_markdown_plus: ^1.0.3
+  yaml: ^3.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
