Refactor home and lesson pages for improved state management and UI consistency
- Added userDataBloc to HomePage for better state access.
- Replaced InheritedProvider with Provider in LearnPage for animation controllers.
- Updated LearnCheckButton to handle PlainLearnQuestion state.
- Modified LearnChoices to return SizedBox for PlainLearnQuestion.
- Introduced PlainLearnInstructions for displaying markdown content.
- Enhanced TrailingChapterIndex for better visual feedback on chapter status.
- Refactored LearnTile and PracticeTile to include trailing indicators and improved navigation logic.
- Removed unused DottedUnderline widget and UnitTileWhite.
- Updated app scaffold to use hooks for state management.
- Added new color scheme extensions for better color handling.
- Updated dependencies in pubspec.yaml for flutter_hooks and hooked_bloc.

--- a/assets/lessons.yaml
+++ b/assets/lessons.yaml
@@ -1,4 +1,62 @@
 ---
+templates:
+  - type: direct
+    parts:
+      - type: main_sentence
+        variants:
+          - "To convert from **{{ from }}** to **{{ to }}**, you need to {{ left_conversion_english }}."
+          - "Converting **{{ from }}** to **{{ to }}** involves {{ left_conversion_english }}."
+          - "The process of converting **{{ from }}** to **{{ to }}** requires you to {{ left_conversion_english }}."
+          - "When converting from **{{ from }}** to **{{ to }}**, you must {{ left_conversion_english }}."
+          - "To convert **{{ from }}** into **{{ to }}**, the operation is to {{ left_conversion_english }}."
+      - type: equation_display
+        variants:
+          - "The conversion can be represented by the equation: ${{ equation }}$."
+          - "Mathematically, the relationship is expressed as: ${{ equation }}$."
+          - "The formula for converting **{{ from }}** to **{{ to }}** is: ${{ equation }}$."
+          - "This conversion follows the equation: ${{ equation }}$."
+          - "The equation illustrating the conversion is: ${{ equation }}$."
+      - type: important_number
+        variants:
+          - "The number **{{ number }}** is the conversion factor between **{{ from }}** and **{{ to }}**."
+          - "A key value for converting between **{{ from }}** and **{{ to }}** is **{{ number }}**."
+          - "Remembering **{{ number }}** is essential for converting **{{ from }}** to **{{ to }}**."
+          - "The conversion between **{{ from }}** and **{{ to }}** utilizes the factor **{{ number }}**."
+          - "The value **{{ number }}** serves as the standard conversion factor from **{{ from }}** to **{{ to }}**."
+      - type: inverse
+        variants:
+          - "Note that the number to remember in this formula is the same as the one for converting between **{{ from }}** and **{{ to }}**, being **{{ number }}**."
+          - "The conversion factor remains consistent at **{{ number }}** when converting between **{{ from }}** and **{{ to }}**, regardless of the direction."
+          - "Remember, converting from **{{ from }}** to **{{ to }}** or vice versa involves the same factor: **{{ number }}**."
+          - "The value **{{ number }}** is used for both converting from **{{ from }}** to **{{ to }}** and from **{{ to }}** to **{{ from }}**."
+          - "The conversion between **{{ from }}** and **{{ to }}** uses the same number, **{{ number }}**, in both directions."
+hints:
+  - "You can click on the underlined text to view hints on each question!"
+  - "While not recommended, you can learn locked chapters by clicking on them."
+  - "Quick refresher: 1 mile ≈ 1 609 meters."
+  - "Remember: 1 kg = 1 000 g and 1 g = 0.001 kg."
+  - "Did you know? 1 liter of water has a mass of about 1 kg."
+  - "Area shortcut: 1 km² = 1 000 000 m² (that’s a million!)."
+  - "Temp tip: °F = (°C × 1.8) + 32. Try it: 20 °C → ? °F."
+  - "Metric prefixes matter: kilo- is 10³, centi- is 10⁻², milli- is 10⁻³."
+  - "Volume check: 1 m³ = 1 000 L."
+  - "Energy fact: 1 BTU ≈ 1 055 J (joules)."
+  - "Pro tip: Round to two significant figures for a quick estimate."
+  - "Offline insight: All conversion factors are built in—no Internet needed!"
+  - "Speed hack: Group similar units—convert mm→cm→m in one go."
+  - "Heat energy refresher: 1 cal ≈ 4.184 J."
+  - "Fun challenge: How many square meters are in 5 acres? (Hint: 1 ac ≈ 4 047 m²)"
+  - "Accuracy matters: Double-check your decimal point—it can shift your result by 1 000×!"
+  - "Conversion memory: 1 inch = 2.54 cm (keep this one handy!)."
+  - "Volume relation: 1 US gallon ≈ 3.785 liters."
+  - "Mass equivalence: 1 pound (lb) ≈ 0.4536 kg."
+  - "Temperature trick: To go from °F to °C: (°F - 32) × 5/9."
+  - "Area conversion: 1 hectare = 10 000 m²."
+  - "Energy insight: 1 kWh = 3.6 million joules."
+  - "Length ladder: 1 mm → 1 cm → 1 m → 1 km—move the decimal 3 places each step."
+  - "Mass milestone: 1 ton (metric) = 1 000 kg."
+  - "Volume variety: 1 tablespoon ≈ 15 mL."
+  - "Quick fact: 1 cubic centimeter (1 cm³) = 1 milliliter (1 mL)."
 units_present:
   - type: length
     conversions:
