--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_markdown_plus: ^1.0.3
   yaml: ^3.1.3
+  flutter_hooks: ^0.20.5
+  hooked_bloc: ^1.6.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
