--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,9 +54,11 @@ dependencies:
   dotted_border: ^2.1.0
   flutter_animate: ^4.5.2
   google_fonts: ^6.2.1
-  flutter_markdown_plus: ^1.0.3
   yaml: ^3.1.3
   flutter_hooks: ^0.20.5
+  markdown_widget: ^2.3.2+8
+  flutter_math_fork: ^0.7.3
+  markdown: ^7.3.0
 
 dev_dependencies:
   flutter_test:
