Refactor UI components and enhance functionality
- Updated padding to use const constructors for better performance in practice_body.dart, practice_check_button.dart, practice_instructions.dart, practice_progress_bar.dart, profile_page.dart, context_dialog_widget.dart, floating_card.dart, lesson tiles, and other widgets.
- Added HSL color scheme extension for better color management and removed unused border color extension.
- Introduced sound player utility for playing audio feedback on correct and incorrect answers.
- Implemented batch processing extension for iterable collections.
- Integrated audioplayers package for audio functionalities across platforms.
- Enhanced context dialog and snackbar styles for improved user experience.
- Cleaned up loading tips by removing outdated information.
- Updated generated plugin registrants for audioplayers support on Linux, macOS, and Windows.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   markdown_widget: ^2.3.2+8
   flutter_math_fork: ^0.7.3
   markdown: ^7.3.0
+  audioplayers: ^6.4.0
 
 dev_dependencies:
   flutter_test:
@@ -87,6 +88,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/audio/
     - assets/logos/google.png
     - assets/illustrations/
     - assets/illustrations/topic.png
