--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -33,6 +33,9 @@ linter:
   # producing the lint.
   rules:
     prefer_double_quotes: true
+    prefer_const_literals_to_create_immutables: true
+    prefer_const_constructors: true
+    prefer_const_constructors_in_immutables: true
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 # Additional information about this file can be found at
